# Aero

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
deploy/: entrypoint.sh
docs/: mc-extract.md
proxy/: go.mod  go.sum
proxy/cmd/proxy/: main.go
proxy/internal/auth/: auth.go  auth_test.go
scripts/: build.sh  dev.sh  generate-certs.sh  generate-protocol.sh  test.sh
server/: Cargo.toml
server/docs/protocol/: multiplayer-packets.md  packet-ids-774.md
server/src/: block_registry.rs  compression.rs  connection.rs  crypto.rs  lib.rs  logging.rs  nbt.rs  registry.rs  stats.rs  world.rs
server/src/anvil/: chunk_nbt.rs  mod.rs  region.rs
server/src/protocol/: entity_ids.rs  handler.rs  mod.rs  packet.rs  packet_ids.rs  slp.rs  types.rs
server/src/protocol/packets/: acknowledge_finish_config.rs  block_events.rs  chat_command.rs  chat_message.rs  chunk_batch_received.rs  client_information.rs  client_settings_play.rs  confirm_teleportation.rs  encryption_response.rs  handshake.rs  interact.rs  keep_alive.rs  known_packs.rs  login_acknowledged.rs  login_start.rs  mod.rs  perform_respawn.rs  pick_item.rs  ping.rs  play_ignore.rs  player_abilities.rs  player_command.rs  player_input.rs  player_position.rs  plugin_message.rs  status_request.rs  swing_arm.rs  tick_end.rs  unknown.rs
server/tests/: connection_test.rs  slp_test.rs
tools/mc-extract/: mc-extract.config.ts  package.json  tsconfig.json
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/public/: aero.txt
web/src/: App.tsx  index.css
(+76 files in other folders)
