[package]
name = "minecraft-web-server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "standalone"
path = "src/bin/standalone.rs"
required-features = ["standalone"]

[features]
default = []
standalone = []

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rsa = { version = "0.9", default-features = false, features = ["std"] }
aes = "0.8"
cfb8 = "0.8"
cipher = "0.4"
sha1 = "0.10"
num-bigint = "0.4"
rand = "0.8"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
